<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center">

        <TextView android:text="@string/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:paddingBottom="30dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_Spotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textButton_Spotify"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_ScoresApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textButton_ScoresApp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_LibraryApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textButton_LibraryApp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_BuildItBigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textButton_BuildItBigger"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_XYZReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textButton_XYZReader"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_Capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textButton_Capstone"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
